💄scrollbar style to avoid bounce between page

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -8,6 +8,26 @@
     margin-right: auto;
 } */
 
+::-webkit-scrollbar {
+    width: 0.70rem;
+}
+ 
+::-webkit-scrollbar-track {
+    /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);  */
+    /* border-radius: 10px; */
+    background: rgb(0 0 0 / 0%);
+}
+ 
+::-webkit-scrollbar-thumb {
+    /* border-radius: 10px; */
+    /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);  */
+    background: rgb(92 97 122 / 28%);
+}
+
+section {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
 body {
     background-color: #2f3741;
     font-family: "Sanchez", sans-serif;
